# python_project_template

./: .ruff.toml  Makefile  README.md  pyproject.toml
src/python_project_template/: main.py
