[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "Python project template."
authors = ["Jing-yilin <yilin.jing.ai@outlook.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
